# c6-touch-starter

./: .gitignore  CMakeLists.txt  QMI8658A_Datasheet_Rev_A.txt  README.md  partitions.csv  sdkconfig.defaults
components/esp_bsp/: CMakeLists.txt  bsp_display.c  bsp_display.h  bsp_qmi8658.c  bsp_qmi8658.h
example/: esp_idf_wom.txt  esp_idf_wom_impl.txt  esp_idf_wom_main.txt
main/: CMakeLists.txt  app_config.h  barcode_manager.c  barcode_manager.h  credentials.h.example  idf_component.yml  led_manager.c  led_manager.h  main.c
main/network/: image_downloader.c  image_downloader.h  mqtt_barcode.c  mqtt_barcode.h  ota_manager.c  ota_manager.h  wifi_manager.c  wifi_manager.h
main/power/: display_power.c  display_power.h  power_manager.c  power_manager.h
main/ui/: ui_components.c  ui_components.h  ui_manager.c  ui_manager.h  ui_theme.c  ui_theme.h
main/ui/tiles/: tile_accelerometer.c  tile_accelerometer.h  tile_barcode.c  tile_barcode.h  tile_gyroscope.c  tile_gyroscope.h  tile_info.c  tile_info.h  tile_interface.h  tile_led.c  tile_led.h  tile_main.c  tile_main.h  tile_settings.c  tile_settings.h  tile_updates.c  tile_updates.h
scripts/: release.sh
server/: .env.example  barcode-resolver.js  package.json
