idf_component_register(SRCS "led_manager.c" "barcode_manager.c" "main.c"
                            "ui/ui_manager.c"
                            "ui/ui_components.c"
                            "ui/ui_theme.c"
                            "ui/tiles/tile_main.c"
                            "ui/tiles/tile_settings.c"
                            "ui/tiles/tile_updates.c"
                            "ui/tiles/tile_info.c"
                            "ui/tiles/tile_accelerometer.c"
                            "ui/tiles/tile_gyroscope.c"
                            "ui/tiles/tile_barcode.c"
                            "ui/tiles/tile_led.c"
                            "network/wifi_manager.c"
                            "network/ota_manager.c"
                            "network/mqtt_barcode.c"
                            "network/image_downloader.c"
                            "power/power_manager.c"
                            "power/display_power.c"
                    INCLUDE_DIRS "." "ui" "ui/tiles" "network" "power"
                    REQUIRES nvs_flash esp_wifi esp_event esp_netif app_update esp_https_ota esp_http_client esp_bsp espressif__esp_lvgl_port mbedtls mqtt mdns json)